The z-index seems to be behind the mouse event target issue

--- a/src/assets/codex.css
+++ b/src/assets/codex.css
@@ -78,7 +78,7 @@ body {
   }
 
   .abstract-block {
-    z-index: -1;
+    /* z-index: -1; */
     line-height: 1.5rem;
   }
 
